<resources>
    <string name="app_name">听云</string>
    <string name="home_title">听云·寻音之旅</string>
    <string name="login">登录/注册</string>
    <string name="unknown">未知</string>
    <string name="home_label_music">推荐的音乐</string>
    <string name="home_deputy_title">listenToTheClouds</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">播放</string>
    <string name="title_notifications">我的</string>
    <string name="my">我的</string>
    <string name="home">首页</string>
    <string name="searchForMusic">搜索音乐...</string>
    <string name="failed">加载失败...</string>
    <string name="title">标题内容</string>
    <string name="song_title">歌曲名称</string>
    <string name="author">歌曲作者</string>
    <string name="total">0</string>
    <string name="favoritePlaylists">收藏歌单</string>
    <string name="favoriteSongs">收藏歌曲</string>
    <string name="createAPlaylist">创建歌单</string>
    <string name="userFeedback">用户反馈</string>
    <string name="localUpload">本地上传</string>
    <string name="slider_description">音乐音量控制滑块</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mailbox">输入邮箱:</string>
    <string name="password">输入密码:</string>
    <string name="verificationCode">验证码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>