<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 导航宿主 Fragment -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_marginBottom="?attr/actionBarSize"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation" />

    <!-- 底部应用栏 -->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/pureWhite"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="12dp"
        app:fabCradleRoundedCornerRadius="15dp"
        app:fabCradleVerticalOffset="0dp"
        app:hideOnScroll="false">

    </com.google.android.material.bottomappbar.BottomAppBar>

    <!-- 中间悬浮按钮 -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:srcCompat="@drawable/playback"
        app:backgroundTint="@color/grayAndBlack"
        app:tint="@null"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_anchorGravity="center"
        app:useCompatPadding="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp"
        app:layout_anchor="@+id/bottomAppBar"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:id="@+id/Home"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/rounded_corners"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/title_home"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"
                app:tint="@color/black"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/btnHome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/User"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/rounded_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnUser"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/title_notifications"
                android:scaleType="fitCenter"
                android:src="@drawable/user"
                app:tint="@color/black"
                android:clickable="false"
                android:focusable="false"/>

            <TextView
                android:id="@+id/btnUser_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my"
                android:textSize="11sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
